--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button onclick="mostrar()" class="btn btn-primary" id="guardarPuntuacionBtn">Siguiente Chiste</button>
     </div>
 
-    <script src="/dist/index.js"></script>
+    <script src="./dist/index.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
